# precourse

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md
build-asan/: 00_smoke_test  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
exercises/: 00_smoke_test.cpp  p1_3_swap.cpp  p1_4_const.cpp  p1_4_nullptr.cpp  p1_4_nullptr_crash.cpp  p1_5_particle.cpp
src/: main.cpp
